# exercicios-ed2

./: pyproject.toml
exercicios_ed2/arvoreExercicios/: exercicioA.py  exercicioB.py
exercicios_ed2/arvoreExercicios/classes/: arvore.py  gerar_graficos.py
grafico_output/: arvore_altura_2  arvore_altura_3  arvore_altura_4  arvore_altura_5  arvore_altura_6  arvore_binaria
