[tool.poetry]
name = "exercicios-ed2"
version = "0.1.0"
description = ""
authors = ["Cecilius Afonso Sousa do Carmo <ceciliusousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
